--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
-mongooseString=mongodb://localhost:27017/message
+mongooseString=mongodb+srv://quiz:quiz123%21%40%23@cluster0.5cy34.mongodb.net/
+SECRET_KEY=SkillExchange
