--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-mongooseString=mongodb+srv://quiz:quiz123%21%40%23@cluster0.5cy34.mongodb.net/
+mongooseString=mongodb://localhost:27017/SkillExchange
 SECRET_KEY=SkillExchange
