--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
 mongooseString=mongodb+srv://quiz:quiz123%21%40%23@cluster0.5cy34.mongodb.net/skillExchange
 SECRET_KEY=SkillExchange
-ALLOWORGIN=https://backend-zxus.onrender.com
+ALLOWORGIN=http://localhost:3000/
