--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "bootstrap-icons": "^1.11.3",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
@@ -19,7 +20,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "socket.io-client": "^4.8.1"
   },
   "scripts": {
